--- a/首页.html
+++ b/首页.html
@@ -1202,179 +1202,177 @@
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u301" class="ax_default box_1">
+      <div id="u301" class="ax_default _一级标题">
         <div id="u301_div" class=""></div>
-        <div id="u301_text" class="text " style="display:none; visibility: hidden">
+        <div id="u301_text" class="text ">
+          <p><span>98.7 </span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (形状) -->
+      <div id="u302" class="ax_default icon">
+        <img id="u302_img" class="img " src="images/首页/u302.svg"/>
+        <div id="u302_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
-      <!-- Unnamed (组合) -->
-      <div id="u302" class="ax_default" data-left="1041" data-top="1644" data-width="115" data-height="38">
-
-        <!-- Unnamed (矩形) -->
-        <div id="u303" class="ax_default _一级标题">
-          <div id="u303_div" class=""></div>
-          <div id="u303_text" class="text ">
-            <p><span>98.73 </span></p>
-          </div>
+      <!-- Unnamed (矩形) -->
+      <div id="u303" class="ax_default label">
+        <div id="u303_div" class=""></div>
+        <div id="u303_text" class="text ">
+          <p><span>2.4</span></p>
         </div>
-
-        <!-- Unnamed (形状) -->
-        <div id="u304" class="ax_default icon">
-          <img id="u304_img" class="img " src="images/首页/u304.svg"/>
-          <div id="u304_text" class="text " style="display:none; visibility: hidden">
-            <p></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (矩形) -->
-        <div id="u305" class="ax_default label">
-          <div id="u305_div" class=""></div>
-          <div id="u305_text" class="text ">
-            <p><span>2.41</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (矩形) -->
-        <div id="u306" class="ax_default label">
-          <div id="u306_div" class=""></div>
-          <div id="u306_text" class="text ">
-            <p><span>2.5%</span></p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Unnamed (下拉列表) -->
-      <div id="u307" class="ax_default droplist">
-        <div id="u307_div" class=""></div>
-        <select id="u307_input" class="u307_input">
-          <option class="u307_input_option" selected value="香菇">香菇</option>
-          <option class="u307_input_option" value="羊肚菌">羊肚菌</option>
-          <option class="u307_input_option" value="木耳">木耳</option>
-        </select>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u308" class="ax_default label">
-        <div id="u308_div" class=""></div>
-        <div id="u308_text" class="text ">
-          <p><span>2023-12-11食用菌价格指数</span></p>
+      <div id="u304" class="ax_default label">
+        <div id="u304_div" class=""></div>
+        <div id="u304_text" class="text ">
+          <p><span>2.5%</span></p>
         </div>
       </div>
 
       <!-- Unnamed (图片 ) -->
-      <div id="u309" class="ax_default image">
-        <img id="u309_img" class="img " src="images/首页/u309.svg"/>
-        <div id="u309_text" class="text " style="display:none; visibility: hidden">
+      <div id="u305" class="ax_default image">
+        <img id="u305_img" class="img " src="images/首页/u305.svg"/>
+        <div id="u305_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u310" class="ax_default box_2">
+      <div id="u306" class="ax_default box_2">
+        <div id="u306_div" class=""></div>
+        <div id="u306_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u307" class="ax_default box_2">
+        <div id="u307_div" class=""></div>
+        <div id="u307_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u308" class="ax_default button">
+        <div id="u308_div" class=""></div>
+        <div id="u308_text" class="text ">
+          <p><span>更多</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u309" class="ax_default button">
+        <div id="u309_div" class=""></div>
+        <div id="u309_text" class="text ">
+          <p><span>更多</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u310" class="ax_default _二级标题">
         <div id="u310_div" class=""></div>
-        <div id="u310_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u311" class="ax_default box_2">
-        <div id="u311_div" class=""></div>
-        <div id="u311_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u312" class="ax_default button">
-        <div id="u312_div" class=""></div>
-        <div id="u312_text" class="text ">
-          <p><span>更多</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u313" class="ax_default button">
-        <div id="u313_div" class=""></div>
-        <div id="u313_text" class="text ">
-          <p><span>更多</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u314" class="ax_default _二级标题">
-        <div id="u314_div" class=""></div>
-        <div id="u314_text" class="text ">
+        <div id="u310_text" class="text ">
           <p><span>河南省西峡县农业综合投资有限公司</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u315" class="ax_default _二级标题">
-        <div id="u315_div" class=""></div>
-        <div id="u315_text" class="text ">
+      <div id="u311" class="ax_default _二级标题">
+        <div id="u311_div" class=""></div>
+        <div id="u311_text" class="text ">
           <p><span>西峡县伏牛山香菇私募基金合伙企业(有限合伙)</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u316" class="ax_default _二级标题">
-        <div id="u316_div" class=""></div>
-        <div id="u316_text" class="text ">
+      <div id="u312" class="ax_default _二级标题">
+        <div id="u312_div" class=""></div>
+        <div id="u312_text" class="text ">
           <p><span>西峡县财政局</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u317" class="ax_default sticky_1">
-        <div id="u317_div" class=""></div>
-        <div id="u317_text" class="text ">
-          <p><span>行情</span></p><p><span>（1）下拉列表，展示食用菌品名，后台字典项添加，默认选择香菇。</span></p><p><span>（2）价格指数规则修改：放弃后台价格指数录入上传</span></p><p><span>新规则：选择两日鲜菇参考价最高价展示（待定）</span></p><p><span><br></span></p><p><span>（3）参考价上传的是最新一天的数据，显示5条数据，超过5条分页显示。</span></p><p><span><br></span></p>
+      <div id="u313" class="ax_default sticky_1">
+        <div id="u313_div" class=""></div>
+        <div id="u313_text" class="text ">
+          <p><span>价格指数规则：选择两日干品通货参考价最高价展示，保留1位小数点。</span></p><p><span>（3）参考价上传的是最新一天的数据，显示5条数据，超过5条分页显示。</span></p><p><span><br></span></p>
         </div>
       </div>
 
       <!-- Counter (组合) -->
-      <div id="u318" class="ax_default" data-label="Counter" data-left="1585" data-top="2264" data-width="120" data-height="21">
+      <div id="u314" class="ax_default" data-label="Counter" data-left="1585" data-top="2264" data-width="120" data-height="21">
 
         <!-- Slide Counter (矩形) -->
-        <div id="u319" class="ax_default heading_3" data-label="Slide Counter">
-          <div id="u319_div" class=""></div>
-          <div id="u319_text" class="text ">
+        <div id="u315" class="ax_default heading_3" data-label="Slide Counter">
+          <div id="u315_div" class=""></div>
+          <div id="u315_text" class="text ">
             <p><span>1</span></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u320" class="ax_default heading_3">
-          <div id="u320_div" class=""></div>
-          <div id="u320_text" class="text ">
+        <div id="u316" class="ax_default heading_3">
+          <div id="u316_div" class=""></div>
+          <div id="u316_text" class="text ">
             <p><span>of</span></p>
           </div>
         </div>
 
         <!-- Previous (形状) -->
-        <div id="u321" class="ax_default icon disabled" data-label="Previous">
-          <img id="u321_img" class="img " src="images/首页/previous_u321_disabled.svg"/>
-          <div id="u321_text" class="text " style="display:none; visibility: hidden">
+        <div id="u317" class="ax_default icon disabled" data-label="Previous">
+          <img id="u317_img" class="img " src="images/首页/previous_u317_disabled.svg"/>
+          <div id="u317_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
 
         <!-- Next (形状) -->
-        <div id="u322" class="ax_default icon" data-label="Next">
-          <img id="u322_img" class="img " src="images/首页/next_u322.svg"/>
-          <div id="u322_text" class="text " style="display:none; visibility: hidden">
+        <div id="u318" class="ax_default icon" data-label="Next">
+          <img id="u318_img" class="img " src="images/首页/next_u318.svg"/>
+          <div id="u318_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
 
         <!-- Total Slides (矩形) -->
-        <div id="u323" class="ax_default heading_3" data-label="Total Slides">
+        <div id="u319" class="ax_default heading_3" data-label="Total Slides">
+          <div id="u319_div" class=""></div>
+          <div id="u319_text" class="text ">
+            <p><span>3</span></p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u320" class="ax_default label">
+        <div id="u320_div" class=""></div>
+        <div id="u320_text" class="text ">
+          <p><span>近两日最高价指数对比</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (组合) -->
+      <div id="u321" class="ax_default" data-left="706" data-top="1655" data-width="74" data-height="33">
+
+        <!-- Unnamed (矩形) -->
+        <div id="u322" class="ax_default _二级标题">
+          <div id="u322_div" class=""></div>
+          <div id="u322_text" class="text ">
+            <p><span>香菇</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (矩形) -->
+        <div id="u323" class="ax_default label">
           <div id="u323_div" class=""></div>
           <div id="u323_text" class="text ">
-            <p><span>3</span></p>
+            <p><span>干品</span></p>
           </div>
         </div>
       </div>
@@ -1383,7 +1381,7 @@
       <div id="u324" class="ax_default label">
         <div id="u324_div" class=""></div>
         <div id="u324_text" class="text ">
-          <p><span>主产区近两日最高价指数对比</span></p>
+          <p><span>2023-03-34</span></p>
         </div>
       </div>
     </div>
